SERVER-48428 do not acquire IX locks in createIndexes if not doing any writes; this will avoid it being killed by stepDown